--- a/css/style.css
+++ b/css/style.css
@@ -5,22 +5,24 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Vollkorn", serif;
-  font-weight: 400; 
+  font-weight: 400;
   font-size: 16px;
 }
-section { 
+section {
 	width: 100%;
  }
 /*title of article*/
 h1 {
-	font-family: "Ubuntu", sans-serif;
-	font-size: 24px;
+	font-family: "Open Sans", sans-serif;
+  font-weight: 800;
+	font-size: 36;
 }
 
 /*author of article*/
 h2{
-	font-family: "Ubuntu", sans-serif;
-	font-size: 20px;
+	font-family: "Open Sans", sans-serif;
+  font-weight: 800;
+	font-size: 24px;
 
 }
 
@@ -33,22 +35,22 @@ p {
 /*keep in order of actual page for organization*/
 
 #toc h1
-#toc h2 
+#toc h2
 #toc p
 
 /*<!-- SECTION ONE START letter to editor through all grown up-->
 */
 #editor-note h1
-#editor-note h2 
+#editor-note h2
 #editor-note p
 
 #kriska h1
-#kriska h2 
+#kriska h2
 #kriska p
 
 
 
- 
+
 
  /* <!-- SECTION TWO START etsi udiditlv through blackberries & brown sugar-->
 
@@ -60,12 +62,3 @@ p {
 
 
   <!-- SECTION FIVE START unmasked friend through a future maybe-->*/
-
-
-
-
-
-
-
-
-
