--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ section {
 h1 {
 	font-family: "Open Sans", sans-serif;
   font-weight: 800;
-	font-size: 36;
+	font-size: 36px;
 }
 
 /*author of article*/
