--- a/css/style.css
+++ b/css/style.css
@@ -61,8 +61,8 @@ p {
 <!-- SECTION FOUR START A slow brunch through a guide to helping depressed parents-->*/
 
 #slow-brunch {
-  background-color: #e0d1e6;
   padding: 2rem 0;
+  background-color: #e0d1e6;
 }
 
 #slow-brunch .container {
@@ -70,16 +70,16 @@ p {
 }
 
 #slow-brunch h1 {
+  margin-top: 0;
   color: #8592c9;
   font-size: 50px;
-  margin-top: 0;
 }
 
 #slow-brunch .article {
   max-width: 500px;
-  background-color: rgba(224, 209, 230, 0.75);
   padding: 0 1rem 1rem;
   margin: 0 auto;
+  background-color: rgba(224, 209, 230, 0.75);
 }
 
 #slow-brunch img {
@@ -91,6 +91,91 @@ p {
   #slow-brunch img {
     width: 200%;
   }
+}
+
+/*----------------*/
+
+#curly-routine {
+  padding: 2rem 0;
+  position: relative;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  background-color: #f6e7a4;
+}
+
+#curly-routine h1 {
+  margin-top: 2rem;
+  font-size: 60px;
+}
+
+#curly-routine img {
+  width: auto;
+  height: 1100px;
+  opacity: 0.15;
+}
+
+#curly-routine p {
+  margin-bottom: 0;
+}
+
+#curly-routine .col-sm-6.img {
+  position: absolute;
+  top: 0;
+}
+
+@media (min-width: 768px) {
+  #curly-routine h1,
+  #curly-routine h2 {
+    width: 500px;
+    margin-left: 50px;
+  }
+
+  #curly-routine p {
+    margin-left: 50px;
+    margin-right: 0;
+  }
+
+  #curly-routine img {
+    opacity: 1;
+  }
+
+  #curly-routine .col-sm-6.img {
+    position: static;
+  }
+}
+
+@media (min-width: 1200px) {
+  #curly-routine h1,
+  #curly-routine h2,
+  #curly-routine p {
+    margin-left: 255px;
+  }
+}
+
+/*----------------*/
+
+#guide-parents {
+  padding: 2rem 0;
+  background-color: black;
+}
+
+#guide-parents h1 {
+  margin-top: 0;
+  color: white;
+  font-size: 75px;
+  text-align: center;
+}
+
+#guide-parents h2 {
+  color: white;
+  text-align: center;
+}
+
+#guide-parents p {
+  max-width: 800px;
+  margin: 1.5rem auto 0;
+  padding: 0.5rem;
+  background-color: white;
 }
 
   /*<!-- SECTION FIVE START unmasked friend through a future maybe-->*/
