--- a/css/style.css
+++ b/css/style.css
@@ -96,9 +96,174 @@ p {
  
 
 
- /* <!-- SECTION TWO START etsi udiditlv through blackberries & brown sugar-->
+ /* <!-- SECTION TWO START etsi udiditlv through blackberries & brown sugar-->*/
+#etsi {
+  /*margin-left: 20vw;*/
+  /*adding-bottom: 20vh;
+  padding-top: 20vh;*/
+}
+
+#etsi h1 {
+  color: #542718;
+  /*text-align: ;*/
+  margin-right: 10vw;
+  font-size: 60px;
+}
+
+#etsi h2 {
+  color: #542718;
+  /*text-align: right;*/
+  margin-right: 10vw;
+}
+
+#etsi p {
+   margin-left: 10vw;
+}
+
+.etsi-text {
+  margin-top: 5vh;
+  width: 55vw;
+  margin-bottom: 20vh;
+  /*border: 1px solid red;*/
+}
+
+#etsi img {
+  width: 30vw;
+}
+
+#etsi div {
+  display: inline-block;
+  /*border: 1px solid blue;*/
+}
+
+.etsi-title {
+  width: 45vw;
+  margin-left: 55vw;
+  padding-top: 450px;
+  /*margin-top: 70vh;*/
+}
+
+.etsi-image {
+  width: 40vw;
+}
+
+.etsi-inner {
+  background-image: url("../images/etsi-1.png"), url("../images/etsi-2.png");
+  background-size: 60vw;
+  background-repeat: no-repeat;
+  background-position: left top, right bottom;
+}
 
 
+@media (max-width: 1000px) {
+  .etsi-title {
+    margin-left: 10vw;
+  }
+}
+
+        /* ------------------- BIG CHOP ---------------*/
+
+#big-chop {
+  background: #abe8bd;
+  padding-bottom: 10vh;
+  padding-top: 20vh;
+  border-top: 10px solid #f9f2a2;
+  border-bottom: 40px solid white;
+  
+}
+
+#big-chop h1 {
+  text-align: right;
+  font-size: 70px;
+  margin-right: 10vw;
+}
+
+#big-chop h2 {
+  text-align: right;
+  margin-right: 10vw;
+}
+
+#big-chop div {
+  display: inline-block;
+  vertical-align: top;
+
+}
+
+#big-chop-title {
+  width: 40vw;
+}
+
+#big-chop-text {
+  width: 40vw; 
+  margin-left: 10vw;
+
+}
+
+#big-chop p {
+
+
+}
+
+        /* ------------------- MIRA-QUE ---------------*/
+
+#mira-que {
+  background: #abe8bd;
+  padding-top: 10vh;
+  padding-bottom: 20vh;
+  border-top: 10px solid #f9f2a2;
+  border-bottom: 10px solid #f9f2a2;
+
+
+}
+
+#mira-que h1 {
+  padding-left: 10vw;
+  font-size: 50px;
+  margin-right: 10vw;
+}
+
+
+#mira-que h2 {
+  padding-left: 10vw;
+}
+
+#mira-que div {
+  text-align: center;
+  margin-left: 40vw;
+  width: 50vw;
+  /*border: 1px solid red;*/
+}
+
+      /* ------------------- BLACKBERRIES ---------------*/
+
+#blackberries {
+  background-image: url("../images/blackberries-1.jpg");
+  background-size: 100vw;
+  opacity: 1;
+  text-align: center;
+  padding-top: 15vh;
+  padding-bottom: 20vh;
+}
+
+
+
+#blackberries h1 {
+  font-size: 60px;
+}
+
+#blackberries div {
+  padding-bottom: 10vh;
+}
+
+#slow-brunch h1 {
+  margin-top: 0;
+  color: #8592c9;
+  font-size: 50px;
+}
+
+
+
+/*
   <!-- SECTION THREE START, mary's grandbaby through limbo -->
 
 
