--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ p {
 
 /*<!-- SECTION THREE START, mary's grandbaby through limbo -->*/
 
-#carissa h1 {
+/*#carissa h1 {
   font-family: "Raleway", sans-serif;
   font-size: 54px;
 }
@@ -68,11 +68,10 @@ p {
 
 #carissa {
   background-color: rgba(255,218,185, 0.3);
-  background-image: url('../images/PHOTO%20summer%20-%20Madeline%20Lee.png');
+  background-image: url('../images/small_summer.png');
   background-repeat: no-repeat;
-  /*background-attachment: fixed;*/
-  background-position: 0vw 80vw;
-  background-size: 100vw;
+  background-position: right bottom;
+  background-size: 1000px;
 }
 
 #carissa .column {
@@ -88,10 +87,107 @@ p {
 #carissa #summer_img {
   width: 100vw;
   z-index: 3;
+}*/
+
+/****************************/
+
+#aishvarya .title {
+  text-align: center;
+  margin-bottom: 80px;
 }
 
+#aishvarya h1 {
+  font-family: "Raleway", sans-serif;
+  font-size: 54px;
 
+}
 
+#aishvarya h2 {
+  font-family: "Raleway", sans-serif;
+  font-size: 20px;
+}
+
+#aishvarya .column {
+  width: 600px;
+  margin-right: auto;
+  margin-left: auto;
+  z-index: 5; 
+}
+
+#aishvarya #pelican {
+  position: absolute;
+  height: 400px;
+  left: 0px;
+  top: 100vh;
+
+}
+#flower {
+  position: absolute;
+  width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  top: 0px;
+}
+#heron{
+  position: absolute;
+  left: 80vw;
+  top: 0vh;
+}
+#bee {
+  position: absolute;
+  width: 400px;
+  left: -15vw;
+  top: 30vh;
+
+}
+#butterfly {
+  position: absolute;
+  left: 72vw;
+  top: 115vh;
+  z-index: 1;
+}
+#blackberries {
+  position: absolute;
+  width: 200px;
+  top: 150vh;
+  left: 10vw;
+}
+
+/**************************************/
+
+#tiara_anon h1 {
+  font-family: "Raleway", sans-serif;
+  font-size: 54px;
+}
+
+#tiara_anon h2 {
+  font-family: "Raleway", sans-serif;
+  font-size: 20px;
+}
+
+#anonymous .title {
+  width: 540px;
+  margin-left: 30px;
+}
+#anonymous .text {
+  margin-left: 40px;
+  margin-bottom: 30px;
+  width: 500px;
+  padding: 15px;
+  border: 1px solid black;
+  background-color: white;
+  text-align: left;
+}
+
+#tiara .title {
+  margin-left: 70vw;
+  margin-bottom: 40px;
+}
+
+#tiara .column {
+  width: 500px;
+  margin-left: 50vw;
+}
 
 /*<!-- SECTION FOUR START A slow brunch through a guide to helping depressed parents-->*/
 
