--- a/css/style.css
+++ b/css/style.css
@@ -385,7 +385,7 @@ p {
   max-width: 600px;
   height: auto;
   margin: 2rem auto;
-
+  
   position: relative;
   left: 50%;
   transform: translateX(-50%);
@@ -397,14 +397,13 @@ p {
   }
 }
 
-
 /*----------------*/
 
 #colored-women {
-  text-align: center;
-  color: white;
   margin: 0;
   padding: 2rem;
+  text-align: center;
+  color: white;
 
   background: url(../images/clouds1.jpeg) no-repeat center center fixed;
   -webkit-background-size: cover;
@@ -427,21 +426,19 @@ p {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-
 }
 
 #colored-women .clouds1 {
   height: 15rem;
   width: 100%;
-
   margin: 1rem 0;
 
   background: url(../images/clouds2.jpg) no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover;}
-
+  background-size: cover;
+}
 
 /*----------------*/
 
