--- a/css/style.css
+++ b/css/style.css
@@ -162,21 +162,17 @@ p {
 
  /* <!-- SECTION TWO START etsi udiditlv through blackberries & brown sugar-->*/
 #etsi {
-  /*margin-left: 20vw;*/
-  /*adding-bottom: 20vh;
-  padding-top: 20vh;*/
+  
 }
 
 #etsi h1 {
   color: #542718;
-  /*text-align: ;*/
   margin-right: 10vw;
   font-size: 60px;
 }
 
 #etsi h2 {
   color: #542718;
-  /*text-align: right;*/
   margin-right: 10vw;
 }
 
@@ -188,7 +184,6 @@ p {
   margin-top: 5vh;
   width: 55vw;
   margin-bottom: 20vh;
-  /*border: 1px solid red;*/
 }
 
 #etsi img {
@@ -197,14 +192,12 @@ p {
 
 #etsi div {
   display: inline-block;
-  /*border: 1px solid blue;*/
 }
 
 .etsi-title {
   width: 45vw;
   margin-left: 55vw;
   padding-top: 450px;
-  /*margin-top: 70vh;*/
 }
 
 .etsi-image {
@@ -228,11 +221,10 @@ p {
         /* ------------------- BIG CHOP ---------------*/
 
 #big-chop {
-  background: #abe8bd;
+  background: #B1E2AA;
   padding-bottom: 10vh;
   padding-top: 20vh;
   border-top: 10px solid #f9f2a2;
-  border-bottom: 40px solid white;
 
 }
 
@@ -250,7 +242,6 @@ p {
 #big-chop div {
   display: inline-block;
   vertical-align: top;
-
 }
 
 #big-chop-title {
@@ -263,18 +254,42 @@ p {
 
 }
 
-#big-chop p {
+#big-chop img {
+  margin-right: 10vw;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 
+}
 
+@media (max-width: 400px) {
+  #big-chop div {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90vw;
+  }
+
+  #big-chop h1 {
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
+  }
+
+  #big-chop h2 {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
         /* ------------------- MIRA-QUE ---------------*/
 
 #mira-que {
-  background: #abe8bd;
+  background: #B1E2AA;
   padding-top: 10vh;
-  padding-bottom: 20vh;
-  border-top: 10px solid #f9f2a2;
+  padding-bottom: 5vh;
+  border-top: 30px solid #f9f2a2;
   border-bottom: 10px solid #f9f2a2;
 
 
@@ -283,19 +298,54 @@ p {
 #mira-que h1 {
   padding-left: 10vw;
   font-size: 50px;
-  margin-right: 10vw;
+  margin-right: 5vw;
+  text-align: left;
 }
 
 
 #mira-que h2 {
   padding-left: 10vw;
+  margin-right: 5vw;
+  text-align: left;
+
 }
 
 #mira-que div {
-  text-align: center;
-  margin-left: 40vw;
-  width: 50vw;
-  /*border: 1px solid red;*/
+  text-align: right;
+  width: 45vw;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+#mira-que p {
+  margin-right: 5vw;
+}
+
+#mira-que img {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
+@media (max-width: 600px) {
+  #mira-que div {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90vw;
+  }
+
+  #mira-que h1 {
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
+  }
+
+  #mira-que h2 {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
       /* ------------------- BLACKBERRIES ---------------*/
