--- a/css/style.css
+++ b/css/style.css
@@ -242,149 +242,93 @@ h2 {
 }
 
 .etsi-inner {
+  width: 100%;
   background-image: url("../images/etsi-1.png"), url("../images/etsi-2.png");
   background-size: 60vw;
   background-repeat: no-repeat;
   background-position: left top, right bottom;
-
-  width: 100%;
 }
-
 
 @media (max-width: 1000px) {
   .etsi-title {
     margin-left: 10vw;
+  }
+
+  .etsi-text {
+    width: 90%;
+    margin-top: 5vh;
+    margin-bottom: 20vh;
   }
 }
 
         /* ------------------- BIG CHOP ---------------*/
 
 #big-chop {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  border: 10px solid #f9f2a2;
   background: #B1E2AA;
-  padding-bottom: 10vh;
-  padding-top: 20vh;
-  border-top: 10px solid #f9f2a2;
-
 }
 
 #big-chop h1 {
-  text-align: right;
+  text-align: center;
   font-size: 70px;
-  margin-right: 10vw;
 }
 
 #big-chop h2 {
-  text-align: right;
-  margin-right: 10vw;
+  text-align: center;
 }
 
-#big-chop div {
-  display: inline-block;
-  vertical-align: top;
+#big-chop .row {
+  width: 100%;
+  max-width: 1000px;
+  margin: 0 auto;
 }
 
-#big-chop-title {
-  width: 40vw;
-}
-
-#big-chop-text {
-  width: 40vw;
-  margin-left: 10vw;
-
+#big-chop .col-sm-6 {
+  padding: 1rem 4rem;
 }
 
 #big-chop img {
-  margin-right: 10vw;
+  max-width: 100%;
   margin-left: auto;
   margin-right: auto;
   display: block;
-
-}
-
-@media (max-width: 400px) {
-  #big-chop div {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 90vw;
-  }
-
-  #big-chop h1 {
-    text-align: center;
-    margin-right: auto;
-    margin-left: auto;
-  }
-
-  #big-chop h2 {
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-  }
 }
 
         /* ------------------- MIRA-QUE ---------------*/
 
 #mira-que {
-  background: #B1E2AA;
-  padding-top: 10vh;
-  padding-bottom: 5vh;
-  border-top: 30px solid #f9f2a2;
-  border-bottom: 10px solid #f9f2a2;
-
-
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  border: 10px solid #f9f2a2;
+  background-color: #B1E2AA;
 }
 
 #mira-que h1 {
-  padding-left: 10vw;
-  font-size: 50px;
-  margin-right: 5vw;
-  text-align: left;
+  margin-top: 0;
+  text-align: center;
 }
-
 
 #mira-que h2 {
-  padding-left: 10vw;
-  margin-right: 5vw;
-  text-align: left;
-
+  text-align: center;
 }
 
-#mira-que div {
-  text-align: right;
-  width: 45vw;
-  display: inline-block;
-  vertical-align: middle;
+#mira-que .row {
+  width: 100%;
+  max-width: 1000px;
+  margin: 0 auto;
 }
 
-#mira-que p {
-  margin-right: 5vw;
+#mira-que .col-sm-6 {
+  padding: 1rem 4rem;
 }
 
 #mira-que img {
+  max-width: 100%;
   margin-left: auto;
   margin-right: auto;
   display: block;
-}
-
-@media (max-width: 600px) {
-  #mira-que div {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 90vw;
-  }
-
-  #mira-que h1 {
-    text-align: center;
-    margin-right: auto;
-    margin-left: auto;
-  }
-
-  #mira-que h2 {
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-  }
 }
 
       /* ------------------- BLACKBERRIES ---------------*/
@@ -392,92 +336,77 @@ h2 {
 #blackberries {
   background-image: url("../images/blackberries-1.jpg");
   background-size: 100%;
-  opacity: 1;
   text-align: center;
-  padding-top: 15vh;
-  padding-bottom: 20vh;
+  padding: 5rem 1rem;
 }
 
 #blackberries h1 {
-  font-size: 60px;
-}
-
-#blackberries div {
-  padding-bottom: 10vh;
-}
-
-#slow-brunch h1 {
-  margin-top: 0;
-  color: #8592c9;
   font-size: 50px;
 }
 
-/*<!-- SECTION THREE START, mary's grandbaby through limbo -->*/
+#blackberries div {
+  padding-bottom: 2rem;
+}
+
+/* SECTION THREE START, mary's grandbaby through limbo */
 
 /**************** CARISSA *******************/
+
+#carissa {
+  padding: 4rem 0;
+  position: relative;
+  background-color: rgba(255,218,185, 0.3);
+}
+
 #carissa h1 {
+  margin-top: 0;
   font-size: 54px;
 }
+
 #carissa h2 {
   font-size: 20px;
 }
-#carissa .blank_space {
-  height: 30px;
-}
 
-#carissa {
-  background-color: rgba(255,218,185, 0.3);
-  position: relative;
-  /*background-size: 1000px;*/
-}
-
-/*#carissa .text {
-  background-image: url('../images/small_summer.png');
-  background-repeat: no-repeat;
-  background-position: right bottom;
-}
-*/
 #carissa .title {
-  padding-top: 20px;
-  padding-left: 20px;
-  font-family: "Raleway", sans-serif;
-  width: 700px;
-  margin-left: 5vw;
+  max-width: 600px;
+  margin: 0 5vw 1rem;
+  padding: 1rem;
   border: 8px solid black;
-  margin-bottom: 30px;
-}
-
-#carissa .column {
-  width: 45vw;
-  float:left
 }
 
 #carissa .text {
-  margin: 5vw;
   position: relative;
+  margin: 5vw;
 }
 
 #carissa #summer_img {
+  position: absolute;
+  bottom: 0;
   width: 100%;
-  margin-top: -100vh;
   z-index: -10;
+}
+
+@media (max-width: 500px) {
+  #carissa h1 {
+    font-size: 40px;
+  }
 }
 
 /*************  AISHVARYA ***************/
 
 #aishvarya {
   position: relative;
-}
-
-#aishvarya #blank_space_1 {
-  height: 50px;
+  padding: 3rem 0;
 }
 
 #aishvarya .title {
-  text-align: center;
-  margin-bottom: 80px;
   position: relative;
   z-index: 12;
+  max-width: 600px;
+  margin: 0 auto 2rem;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.5);
+
 }
 
 #aishvarya h1 {
@@ -489,7 +418,7 @@ h2 {
 }
 
 #aishvarya .column {
-  width: 600px;
+  max-width: 600px;
   margin-right: auto;
   margin-left: auto;
   position: relative;
@@ -499,86 +428,124 @@ h2 {
 }
 
 #aishvarya img {
+  position: absolute;
   opacity: 0.9;
 }
 
 #aishvarya #flower {
-  position: absolute;
   width: 500px;
   margin-left: -8vw;
   top: 0px;
   z-index: 1;
 }
+
 #aishvarya #pelican {
-  position: absolute;
   height: 400px;
   left: 0;
   top: 100vh;
   z-index: 2;
 }
+
 #aishvarya #heron{
-  position: absolute;
   right: 0;
   top: 0;
   z-index: 3;
 }
+
 #aishvarya #bee {
-  position: absolute;
   width: 400px;
   left: -15vw;
   top: 45vh;
   z-index: 4;
 }
+
 #aishvarya #butterfly {
-  position: absolute;
   right: 0;
   top: 115vh;
   z-index: 5;
 }
+
 #aishvarya #blackberry {
-  position: absolute;
   width: 200px;
   top: 160vh;
   left: 8vw;
   z-index: 6;
 }
 
-#blank_space {
-  height: 300px;
+@media (max-width: 1000px) {
+  #aishvarya #flower,
+  #aishvarya #pelican,
+  #aishvarya #bee {
+    width: 200px;
+  }
+
+  #aishvarya #blackberry,
+  #aishvarya #heron,
+  #aishvarya #butterfly {
+    width: 200px;
+  }
+
+  #aishvarya #blackberry {
+    width: 100px;
+  }
+
+}
+
+@media (max-width: 600px) {
+  #aishvarya .column {
+    font-size: 2.4vw;
+    padding: 1em;
+  }
 }
 
 /************************* EMILY ****************************/
 
+#emily {
+  position: relative;
+  z-index: 20;
+  margin: 4rem 0;
+  padding: 4rem 0;
+  background-color: white;
+  background-image: url("../images/star-ferry.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center top;
+}
+
 #emily h1 {
+  text-align: center;
   font-size: 54px;
 }
 
 #emily h2 {
+  text-align: center;
   font-size: 20px;
 }
 
-#emily .title {
-  width: 190px;
-  margin-left: 40vw;
-  margin-bottom: 40px;
+#emily .text {
+  padding: 2rem 0;
+  text-align: left;
+  display: inline-block;
 }
 
 #emily .column {
-  width: 300px;
-  margin-left: 40vw;
+  margin: 0 auto;
+  text-align: center;
 }
 
 /******************* ANONYMOUS AND TIARA *******************/
 
 #tiara_anon {
+  padding: 4rem 0 0 0;
   background-image: url("../images/trapped_limbo.png");
-  background-size: 60vw;
+  background-size: auto 100%;
   background-repeat: no-repeat;
   background-position: left top;
   background-attachment: fixed;
 }
 
 #tiara_anon h1 {
+  margin-top: 0;
   font-size: 54px;
 }
 
@@ -586,37 +553,44 @@ h2 {
   font-size: 20px;
 }
 
-#anonymous #blank_space {
-  height: 50px;
-}
-
 #anonymous .title {
-  width: 540px;
-  margin: 30px;
-  padding: 0px 15px 30px 15px;
+  max-width: 540px;
+  margin: 2rem;
+  padding: 1rem;
   border: 1px solid black;
   background-color: white;
 }
-#anonymous .text {
-  margin: 20px 0px 30px 40px;
-  width: 500px;
-  padding: 15px;
+
+#anonymous p {
+  max-width: 500px;
+  margin: 1rem 2rem 2rem 2rem;
+  padding: 1rem;
   border: 1px solid black;
   background-color: white;
   text-align: left;
 }
 
+#tiara {
+  text-align: right;
+}
+
 #tiara .title {
-  margin-top: 400px;
-  width: 500px;
-  margin-left: 55vw;
+  text-align: left;
+  display: inline-block;
 }
-#tiara .column {
-  width: 500px;
-  margin-left: 50vw;
+
+#tiara .inner-text {
+  max-width: 600px;
+  margin-top: 15rem;
+  padding: 2rem;
+  text-align: left;
+  display: inline-block;
 }
-#tiara #blank_space {
-  height: 50px;
+
+@media (max-aspect-ratio: 1018/360) {
+  #tiara .inner-text{
+    background-color: rgba(255,255,255,0.9);
+  }
 }
 
 /*<!-- SECTION FOUR START A slow brunch through a guide to helping depressed parents-->*/
