--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,12 @@ ul {
   list-style: none;
 }
 
+#cd-vertical-nav {
+  display: none;
+}
+
 .no-touch #cd-vertical-nav {
+  display: block;
   position: fixed;
   right: 40px;
   top: 50%;
