--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ ul {
   display: none;
 }
 
-.no-touch #cd-vertical-nav {
+#cd-vertical-nav {
   display: block;
   position: fixed;
   right: 40px;
@@ -45,21 +45,21 @@ ul {
   transform: translateY(-50%);
   z-index: 100;
 }
-.no-touch #cd-vertical-nav li {
+#cd-vertical-nav li {
   text-align: right;
 }
-.no-touch #cd-vertical-nav a {
+#cd-vertical-nav a {
   display: inline-block;
   /* prevent weird movements on hover when you use a CSS3 transformation - webkit browsers */
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
-.no-touch #cd-vertical-nav a:after {
+#cd-vertical-nav a:after {
   content: "";
   display: table;
   clear: both;
 }
-.no-touch #cd-vertical-nav a span {
+#cd-vertical-nav a span {
   float: right;
   display: inline-block;
   -webkit-transform: scale(0.6);
@@ -68,20 +68,20 @@ ul {
   -o-transform: scale(0.6);
   transform: scale(0.6);
 }
-.no-touch #cd-vertical-nav a:hover span {
+#cd-vertical-nav a:hover span {
   -webkit-transform: scale(1);
   -moz-transform: scale(1);
   -ms-transform: scale(1);
   -o-transform: scale(1);
   transform: scale(1);
 }
-.no-touch #cd-vertical-nav a:hover .cd-label {
+#cd-vertical-nav a:hover .cd-label {
   opacity: 1;
 }
-.no-touch #cd-vertical-nav a.is-selected .cd-dot {
+#cd-vertical-nav a.is-selected .cd-dot {
   background-color: white;
 }
-.no-touch #cd-vertical-nav .cd-dot {
+#cd-vertical-nav .cd-dot {
   position: relative;
   /* we set a top value in order to align the dot with the label. If you change label's font, you may need to change this top value*/
   top: 5px;
@@ -98,7 +98,7 @@ ul {
   -o-transform-origin: 50% 50%;
   transform-origin: 50% 50%;
 }
-.no-touch #cd-vertical-nav .cd-label {
+#cd-vertical-nav .cd-label {
   font-family: "Open Sans", sans-serif;
   font-weight: 800;
   position: relative;
