--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,16 @@ section {
   width: 100%;
 }
 
+img {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
+}
+
 h1 {
   font-family: "Open Sans", sans-serif;
   font-weight: 800;
@@ -21,18 +31,21 @@ h1 {
 
 h2 {
   font-family: "Open Sans", sans-serif;
+  font-weight: 800;
 	font-size: 20px;
 }
 
 ul {
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 #cd-vertical-nav {
   display: none;
 }
 
-#cd-vertical-nav {
+.no-touch #cd-vertical-nav {
   display: block;
   position: fixed;
   right: 40px;
@@ -45,21 +58,21 @@ ul {
   transform: translateY(-50%);
   z-index: 100;
 }
-#cd-vertical-nav li {
+.no-touch #cd-vertical-nav li {
   text-align: right;
 }
-#cd-vertical-nav a {
+.no-touch #cd-vertical-nav a {
   display: inline-block;
   /* prevent weird movements on hover when you use a CSS3 transformation - webkit browsers */
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
-#cd-vertical-nav a:after {
+.no-touch #cd-vertical-nav a:after {
   content: "";
   display: table;
   clear: both;
 }
-#cd-vertical-nav a span {
+.no-touch #cd-vertical-nav a span {
   float: right;
   display: inline-block;
   -webkit-transform: scale(0.6);
@@ -68,20 +81,20 @@ ul {
   -o-transform: scale(0.6);
   transform: scale(0.6);
 }
-#cd-vertical-nav a:hover span {
+.no-touch #cd-vertical-nav a:hover span {
   -webkit-transform: scale(1);
   -moz-transform: scale(1);
   -ms-transform: scale(1);
   -o-transform: scale(1);
   transform: scale(1);
 }
-#cd-vertical-nav a:hover .cd-label {
+.no-touch #cd-vertical-nav a:hover .cd-label {
   opacity: 1;
 }
-#cd-vertical-nav a.is-selected .cd-dot {
+.no-touch #cd-vertical-nav a.is-selected .cd-dot {
   background-color: white;
 }
-#cd-vertical-nav .cd-dot {
+.no-touch #cd-vertical-nav .cd-dot {
   position: relative;
   /* we set a top value in order to align the dot with the label. If you change label's font, you may need to change this top value*/
   top: 5px;
@@ -98,7 +111,7 @@ ul {
   -o-transform-origin: 50% 50%;
   transform-origin: 50% 50%;
 }
-#cd-vertical-nav .cd-label {
+.no-touch #cd-vertical-nav .cd-label {
   font-family: "Open Sans", sans-serif;
   font-weight: 800;
   position: relative;
@@ -120,6 +133,61 @@ ul {
   transform-origin: 100% 50%;
 }
 
+@media (max-height: 600px) {
+  .no-touch #cd-vertical-nav {
+    display: none;
+  }
+}
+
+#toc {
+  background-color: rgba(0,0,0,0.5);
+  background: url("../images/cover.png") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+#toc .inner-text {
+  background-color: rgba(0,0,0,0.5);
+  padding: 2rem 4rem;
+
+}
+
+#toc h1 {
+  font-family: "Playfair Display", serif;
+  font-weight: 900;
+  font-style: italic;
+  font-size: 12vw;
+  margin-top: 0;
+  color: white;
+  text-align: center;
+}
+
+#toc h2 {
+  color: white;
+  text-align: center;
+}
+
+#toc a,
+#toc .author {
+  font-family: "Open Sans", sans-serif;
+  font-weight: 800;
+	font-size: 20px;
+  color: white;
+}
+
+#toc .author {
+  font-weight: 600;
+}
+
+#toc ul {
+  margin-top: 2rem;
+}
+
+#toc li {
+  margin-top: 1rem;
+}
 
 /* SECTION ONE START letter to editor through all grown up */
 
@@ -196,7 +264,6 @@ ul {
 #spectacle_of_black_life img {
   width: 100%;
   height: auto;
-  align: center;
 }
 
 @media (min-width: 900px) {
