--- a/css/style.css
+++ b/css/style.css
@@ -1093,3 +1093,26 @@ ul {
     padding: 2rem;
   }
 }
+
+#parting h1{
+  margin-top: 0;
+  text-align: left;
+}
+
+#parting .col-sm-5 {
+  text-align: center;
+  margin-bottom: 25vh; 
+}
+
+#back_to_O {
+  text-align: center;
+  font-size: 40px; 
+  font-style: italic;
+  margin-bottom: 25vh;
+}
+/*#parting .col-sm-7 {
+  margin-left: 10vw;
+}*/
+
+
+
